--- a/templates/score.html
+++ b/templates/score.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta http-equiv="refresh" content="10" >
+    <meta name="robots" content="noindex,nofollow">
+    <meta name="robots" content="noodp">
     <meta name="description" content="Score">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
@@ -13,14 +16,18 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/score.css') }}">
 
   </head>
 
   <body>
-
-    <div class="container">
-      <h1>Here will be score</h1>
-    </div><!-- /.container -->
+      <div class="container">
+        <p class="score-label text-center">Timeout {{ orders_report.latest_open_order_timeout }} minutes</p>
+        <p class="score text-center" style="color: {{ orders_report.get('score_color', 'green') }}"><span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+        </p>
+        <p class="text-center">Total open  {{ orders_report.get('open_orders_count', 0) }}</p>
+        <p class="text-center">Total finished {{ orders_report.get('confirmed_orders_count', 0) }}</p>
+      </div><!-- /.container -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
