Adds favicon ico

--- a/templates/score.html
+++ b/templates/score.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="noodp">
     <meta name="description" content="Score">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 
     <title>Score</title>
 
